--- a/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
+++ b/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
@@ -95,4 +95,34 @@
     <servlet-name>list.bo</servlet-name>
     <url-pattern>/list.bo</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>detail.bo</display-name>
+    <servlet-name>detail.bo</servlet-name>
+    <servlet-class>com.kh.board.controller.BoardDetailController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>detail.bo</servlet-name>
+    <url-pattern>/detail.bo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>enrollForm.bo</display-name>
+    <servlet-name>enrollForm.bo</servlet-name>
+    <servlet-class>com.kh.board.controller.BoardEnrollController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>enrollForm.bo</servlet-name>
+    <url-pattern>/enrollForm.bo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>insert.bo</display-name>
+    <servlet-name>insert.bo</servlet-name>
+    <servlet-class>com.kh.board.controller.BoardInsertController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>insert.bo</servlet-name>
+    <url-pattern>/insert.bo</url-pattern>
+  </servlet-mapping>
 </web-app>
